# github-big-proj17

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  README_CN.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
codetruth/: __init__.py
codetruth/api/: __init__.py
codetruth/cli/: __init__.py
codetruth/config/: settings.py
codetruth/engine/: __init__.py
codetruth/engine/graph/: __init__.py
codetruth/engine/optimizer/: __init__.py
codetruth/engine/provenance/: __init__.py
codetruth/engine/scoring/: __init__.py
codetruth/gates/: __init__.py
codetruth/memory/: __init__.py
tests/: conftest.py
tests/unit/: test_gates.py  test_graph.py  test_memory.py  test_optimizer.py  test_provenance.py  test_scoring.py
