[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codetruth"
version = "1.0.0"
description = "CodeTruth - AI-Generated Code Trust & Verification Platform"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "lanekingkong", email = "lanekingkong@github.com" }
]
keywords = [
    "ai-code-review",
    "code-quality",
    "trust-scoring",
    "code-provenance",
    "knowledge-graph",
    "developer-tools",
    "ai-governance",
    "code-security",
    "devsecops",
    "ai-trust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Review",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "lancedb>=0.5.0",
    "tree-sitter>=0.21.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
codetruth = "codetruth.cli.main:cli"

[project.urls]
Homepage = "https://github.com/lanekingkong/codetruth"
Documentation = "https://github.com/lanekingkong/codetruth#readme"
Repository = "https://github.com/lanekingkong/codetruth.git"
Issues = "https://github.com/lanekingkong/codetruth/issues"

[tool.setuptools.packages.find]
include = ["codetruth*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"